@@ -1,6 +1,7 @@
 Revision history for Net-OpenXchange
 
 {{$NEXT}}
+          Switch to parameterized roles
 
 0.001     2011-02-22 16:08:50 Europe/Berlin
           Initial release
